Closed Bug 386282 Opened 17 years ago Closed 17 years ago

nsIAccessible::GetDescription() method fail on document accessible

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: vasiliy.potapenko, Assigned: vasiliy.potapenko)

Details

(Keywords: access)

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; ru; rv:1.8.1.3) Gecko/20070309 Firefox/2.0.0.3
Build Identifier: 

nsAccessible::GetDescription() method fail if threre is no description

Reproducible: Always
Keywords: access
Assignee: aaronleventhal → vasiliy.potapenko
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attachment #270541 - Flags: review?(surkov.alexander)
Comment on attachment 270541 [details] [diff] [review]
Defined is GetDescription method in nsDocAccessible

r=me
Attachment #270541 - Flags: review?(surkov.alexander) → review+
bug description:

nsIAccessible::GetDescription() method fails on document accessible, it leads to an exception in script. To get rid this I guess it's better way to redefine the method in nsDocAccessible.
Attachment #270541 - Flags: superreview?(neil)
Attachment #270541 - Flags: review?(aaronleventhal)
Attachment #270541 - Flags: review+
Comment on attachment 270541 [details] [diff] [review]
Defined is GetDescription method in nsDocAccessible

I think we don't need additional r/sr for this bug.
Attachment #270541 - Flags: superreview?(neil)
Attachment #270541 - Flags: review?(aaronleventhal)
checked in
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Summary: nsAccessible::GetDescription() method fail if threre is no description → nsIAccessible::GetDescription() method fail on document accessible
If the <html> or <body> had aaa:describedby there could be a description for the element. See GetRoleContent().

IMO the correct fix would change GetAccessibleRelated to check <html> or <body> for accessible relations. If it makes the code a lot more complicated to check both, then we could just check <body> in HTML and I will tell the ARIA standardization group what we did. In other markup languages we should check the top element.
Will a document accessible have description in that case?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: