Bug 386282 - nsIAccessible::GetDescription() fails on document accessible, r=me, patch=vasiliy.potapenko