accessible/src/base/nsDocAccessible.h
@@ -76,6 +76,7 @@ class nsDocAccessible : public nsHyperTextAccessibleWrap,
     NS_IMETHOD GetRole(PRUint32 *aRole);
     NS_IMETHOD GetName(nsAString& aName);
     NS_IMETHOD GetValue(nsAString& aValue);
+    NS_IMETHOD GetDescription(nsAString& aDescription);
     NS_IMETHOD GetState(PRUint32 *aState, PRUint32 *aExtraState);
     NS_IMETHOD GetFocusedChild(nsIAccessible **aFocusedChild);
     NS_IMETHOD GetParent(nsIAccessible **aParent);
